# ai_devs4

./: .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml
src/ai_devs/: __init__.py  client.py  config.py  io.py
tasks/: 1_people.py  2_findhim.py  task_01_people.py  task_02_findhim.py  task_04_sendit.py
